# docs/swagger.yaml
@@ -67,7 +67,7 @@ info:
   title: Example Api
   version: "2.0"
 paths:
-  /products:
+  /api/products:
     get:
       consumes:
       - application/json
@@ -96,6 +96,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/rest.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get paginated list of products
       tags:
       - products
@@ -125,10 +127,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/rest.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create a new product
       tags:
       - products
-  /products/{id}:
+  /api/products/{id}:
     delete:
       consumes:
       - application/json
@@ -154,6 +158,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/rest.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Delete a product by ID
       tags:
       - products
@@ -186,6 +192,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/rest.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get a product by ID
       tags:
       - products
@@ -224,10 +232,46 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/rest.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Update a product by ID
       tags:
       - products
-  /users/login:
+  /api/users/page:
+    get:
+      consumes:
+      - application/json
+      description: Get a paginated list of users based on provided input
+      parameters:
+      - description: Pagination Input
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/rest.GetPaginationInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/rest.User'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/rest.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/rest.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get paginated list of users
+      tags:
+      - users
+  /auth/login:
     post:
       consumes:
       - application/json
@@ -260,40 +304,8 @@ paths:
             $ref: '#/definitions/rest.ErrorResponse'
       summary: Login a user
       tags:
-      - users
-  /users/page:
-    get:
-      consumes:
-      - application/json
-      description: Get a paginated list of users based on provided input
-      parameters:
-      - description: Pagination Input
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/rest.GetPaginationInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/rest.User'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/rest.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/rest.ErrorResponse'
-      summary: Get paginated list of users
-      tags:
-      - users
-  /users/sign-up:
+      - auth
+  /auth/sign-up:
     post:
       consumes:
       - application/json
@@ -322,5 +334,10 @@ paths:
             $ref: '#/definitions/rest.ErrorResponse'
       summary: Sign up a new user
       tags:
-      - users
+      - auth
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
