# internal/controller/rest/response.go
@@ -1,0 +1,16 @@
+package rest
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/sirupsen/logrus"
+)
+
+type errorResponse struct {
+	Message string `json:"message"`
+}
+
+
+func newErrorResponse(c *gin.Context, statusCode int, message string) {
+	logrus.Error(message)
+	c.AbortWithStatusJSON(statusCode, errorResponse{message})
+}
